syntax = "proto3";
package lubtd.orbit.orbit;

import "gogoproto/gogo.proto";
import "orbit/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lubtd/orbit/x/orbit/types";

// GenesisState defines the orbit module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
